Added cors and cookie auth
