# app/controllers/user_controller.rb
@@ -36,6 +36,16 @@ class UserController < ApplicationController
 
   token = JsonWebToken.encode(user_id: user.id)
 
+  # Creates a cookie
+  cookies.signed[:auth_token] = {
+      value: token,
+      httponly: true,
+      secure: Rails.env.production?,
+      same_site: :lax,
+      expires: 24.hours.from_now
+    }
+
+
   render json: {
     user: UserSerializer.new(user),
     token: token,
