# config/routes.rb
@@ -1,6 +1,6 @@
 Rails.application.routes.draw do
-  mount Rswag::Ui::Engine => '/api-docs'
-  mount Rswag::Api::Engine => '/api-docs'
+  mount Rswag::Ui::Engine => "/api-docs"
+  mount Rswag::Api::Engine => "/api-docs"
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
   # Reveal health status on /up that returns 200 if the app boots with no exceptions, otherwise 500.
@@ -16,6 +16,7 @@ Rails.application.routes.draw do
   post "/password/verify-otp", to: "auth#verify_password_reset_otp"
   post "/password/reset", to: "auth#reset_password"
   post "/login", to: "auth#login"
+  delete "/logout", to: "auth#logout"
 
   # Notes cruds
   resources :note
